--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -75,15 +75,15 @@
   @apply dark:bg-gray-200;
 }
 .dark .swiper-pagination-bullet-active {
-  background-color: rgb(5 206 145) !important;
+  background-color: rgb(98 144 200) !important;
 }
 .swiper-pagination-bullet-active {
   background-color: rgb(0 140 140) !important;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-  @apply dark:text-carrigreen;
+.dark .swiper-button-prev,
+.dark .swiper-button-next {
+  color: rgb(98 144 200) !important;
 }
 .swiper-button-prev,
 .swiper-button-next {
